# vaultwarden-backup

./: CHANGELOG.md  Cargo.toml  README.md  config.toml
.github/workflows/: release.yaml
src/: config.rs  database.rs  file.rs  main.rs  middleware.rs
